<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40px">

    <EditText
        android:id="@+id/et_login_id"
        android:layout_marginTop="10dp"
        style="@style/login_editext_style"
        android:drawableLeft="@drawable/ico_account"
        android:inputType="phone"
        android:hint="@string/login_account"
        />
    <EditText
        android:id="@+id/et_login_password"
        android:layout_marginTop="25dp"
        style="@style/login_editext_style"
        android:drawableLeft="@drawable/ico_key"
        android:inputType="textPassword"
        android:hint="@string/login_key"
        />

    <TextView
        android:gravity="center"
        android:id="@+id/tv_login"
        android:layout_marginTop="50dp"
        style="@style/login_button_style"
        android:text="@string/login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_forget_password"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_S"
            android:text="@string/login_wjmm"/>
        <TextView
            android:id="@+id/tv_login_register"
            android:padding="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/textSize_S"
            android:text="@string/register"/>


    </RelativeLayout>


</LinearLayout>